Deploy no railway

--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,6 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -63,6 +58,10 @@
 				<groupId>javax.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
 				<version>4.0.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.postgresql</groupId>
+				<artifactId>postgresql</artifactId>
 			</dependency>
 	</dependencies>
 
@@ -104,6 +103,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>docker-api</finalName>
 	</build>
 
 </project>
